@@ -2,6 +2,7 @@
 -revise sprite orderedupdates.
 -add sprite group alias.
 -refactor sprite collide methods.
+-add sprite layeredupdates.
 
 0.30    2021-04-28
 -center display frame.
